--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -1,50 +1,23 @@
-<div class="wrapper d-flex align-items-stretch">
-    <nav id="sidebar">
-        <div class="custom-menu">
+  <nav id="sidebar">
+    <div class="custom-menu">
       <i class="fa fa-bars"></i>
-      <span class="sr-only">Toggle Menu</span>
-    </button>
-</div>
-        <div class="p-4 pt-5">
-          <h1><a href="/home" class="logo">DockerFarm</a></h1>
-    <ul class="list-unstyled components mb-5">
-      <li class="active">
-        <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Home</a>
-        <ul class="collapse list-unstyled" id="homeSubmenu">
-        <li>
-            <a href="#">Home 1</a>
-        </li>
-        <li>
-            <a href="#">Home 2</a>
-        </li>
-        <li>
-            <a href="#">Home 3</a>
-        </li>
+      <div class="p-4 pt-5">
+        <h1><a href="/home" class="logo">TestVersion1</a></h1>
+        <ul class="list-unstyled components mb-5">
+          <li class="active">
+            <a href="/home">대쉬보드</a>
+          <li>
+            <a href="/logging">로깅</a>
+          </li>
+          <li>
+            <a href="/infra">인프라</a>
+          </li>
+          <li>
+            <a href="/namespace">네임스페이스 목록</a>
+          </li>
+          <li>
+            <a href="/pod">Pod 목록</a>
+          </li>
         </ul>
-      </li>
-      <li>
-          <a href="#">About</a>
-      </li>
-      <li>
-      <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
-      <ul class="collapse list-unstyled" id="pageSubmenu">
-        <li>
-            <a href="#">Page 1</a>
-        </li>
-        <li>
-            <a href="#">Page 2</a>
-        </li>
-        <li>
-            <a href="#">Page 3</a>
-        </li>
-      </ul>
-      </li>
-      <li>
-      <a href="#">Portfolio</a>
-      </li>
-      <li>
-      <a href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+      </div>
+  </nav>
