--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -35,10 +35,10 @@
                   </div>
                 </div>
               </div>
-              <div class="pt-5 mx-3">
-                <span>노드 정보</span>
-                <div>
-                  <table class="table">
+              <div class="pt-5 mx-3 dropdown">
+                <span class="dropdown-toggle">노드 정보</span>
+                <div class="dropdown-menu">
+                  <table class="table dropdown-item">
                     <tbody>
                       <tr>
                         <th scope="row" class="col-2 text-center">이름</th>
@@ -49,7 +49,7 @@
                         <td class="col-8">Docker 버전</td>
                       </tr>
                       <tr>
-                        <th scope="row" class="text-center">Node CPU</th>
+                        <th scope="row" class="text-cente">Node CPU</th>
                         <td>Node CPU</td>
                       </tr>
                       <tr>
