--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -18,6 +18,9 @@
           <li>
             <a href="/pod">Pod 목록</a>
           </li>
+          <li>
+            <a href="/service">Service 목록</a>
+          </li>
         </ul>
       </div>
   </nav>
