--- a/web/views/namespace.ejs
+++ b/web/views/namespace.ejs
@@ -8,8 +8,8 @@
                 <%- include("partials/sidebar"); -%>
                     <!-- Page Content  -->
                     <div id="content" class="p-4 p-md-5 pt-5">
-                        <div class="container-fluid">
-                            <div class = row>
+                        <div class="container">
+                            <div class = "table-responsive">
                                 <table class="table">
                                     <thead>
                                       <tr>
@@ -22,21 +22,21 @@
                                     </thead>
                                     <tbody>
                                       <tr>
-                                        <th scope="row" class="col-1">1</th>
+                                        <th scope="row" class="col">1</th>
                                         <td class="col-3">kind</td>
                                         <td class="col-3">name</td>
                                         <td class="col-3">status</td>
                                         <td class="col-3">podnumber</td> <!--for문으로 namespace 갯수 만큼 나오게 하기-->
                                       </tr>
                                       <tr>
-                                        <th scope="row" class="col-1">1</th>
+                                        <th scope="row" class="col">1</th>
                                         <td class="col-3">kind</td>
                                         <td class="col-3">name</td>
                                         <td class="col-3">status</td>
                                         <td class="col-3">podnumber</td> <!--for문으로 namespace 갯수 만큼 나오게 하기-->
                                       </tr>
                                       <tr>
-                                        <th scope="row" class="col-1">1</th>
+                                        <th scope="row" class="col">1</th>
                                         <td class="col-3">kind</td>
                                         <td class="col-3">name</td>
                                         <td class="col-3">status</td>
