--- a/web/public/css/sidebar.css
+++ b/web/public/css/sidebar.css
@@ -1,92 +1,80 @@
- a {
-    color: #007bff;
-    text-decoration: none;
-    background-color: transparent; }
-    a:hover {
-      color: #0056b3;
-      text-decoration: none; }
+html {
+    width: 100% !important; 
+}
 
-  a {
-    -webkit-transition: .3s all ease;
-    -o-transition: .3s all ease;
-    transition: .3s all ease;
-    color: #866ec7; }
-  
-  #sidebar {
-    min-width: 250px;
-    max-width: 250px;
-    background: #866ec7;
-    color: #fff;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s;
-    position: relative; }
-    #sidebar .h6 {
-      color: #fff; }
-    #sidebar.active {
-      margin-left: -250px; }
-      #sidebar.active .custom-menu {
-        margin-right: -50px; }
-    #sidebar h1 {
-      margin-bottom: 20px;
-      font-weight: 700; }
-      #sidebar h1 .logo {
-        color: #fff; }
-    #sidebar ul.components {
-      padding: 0; }
-    #sidebar ul li {
-      font-size: 16px; }
-      #sidebar ul li > ul {
-        margin-left: 10px; }
-        #sidebar ul li > ul li {
-          font-size: 14px; }
-      #sidebar ul li a {
-        padding: 10px 0;
-        display: block;
-        color: rgba(255, 255, 255, 0.8);
-        border-bottom: 1px solid rgba(255, 255, 255, 0.1); }
-        #sidebar ul li a:hover {
-          color: #fff; }
-      #sidebar ul li.active > a {
-        background: transparent;
-        color: #fff; }
-    @media (max-width: 991.98px) {
-      #sidebar {
-        margin-left: -250px; }
-        #sidebar.active {
-          margin-left: 0; }
-        #sidebar .custom-menu {
-          margin-right: -50px !important;
-          top: 10px !important; } }
-    #sidebar .custom-menu {
-      display: inline-block;
-      position: absolute;
-      top: 20px;
-      right: 0;
-      margin-right: -20px;
-      -webkit-transition: 0.3s;
-      -o-transition: 0.3s;
-      transition: 0.3s; }
-      @media (prefers-reduced-motion: reduce) {
-        #sidebar .custom-menu {
-          -webkit-transition: none;
-          -o-transition: none;
-          transition: none; } }
-      #sidebar .custom-menu .btn {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%; }
-        #sidebar .custom-menu .btn.btn-primary {
-          background: #6749b9;
-          border-color: #6749b9; }
-          #sidebar .custom-menu .btn.btn-primary:hover, #sidebar .custom-menu .btn.btn-primary:focus {
-            background: #6749b9 !important;
-            border-color: #6749b9 !important; }
-    
-  #content {
-    width: 100%;
+#content {
+    width: 100% !important;
     padding: 0;
     min-height: 100vh;
     -webkit-transition: all 0.3s;
     -o-transition: all 0.3s;
     transition: all 0.3s; }
+
+/*메뉴아이콘*/
+
+a { text-decoration:none }
+/*nav input[id="menuicon"]{display:none;}
+nav input[id="menuicon"]+label{
+    display:block;
+    width:42px;
+    height:20px;
+    position:relative;
+    top:20px;
+    left:0px;
+    cursor:pointer;
+}
+nav input[id="menuicon"]+ label span{
+    display:block;
+    position:absolute;
+    bottom:10px;
+    left:5px;
+    width:100%;
+    height:5px;
+    border-radius:30px;
+    transition:all .35s;
+    z-index: 500;
+}*/
+/*nav input[id="menuicon"]+label span:nth-child(1){ top:0; background:#000;} 
+nav input[id="menuicon"]+label span:nth-child(2){ top:50%; transform:translateY(-50%); background:#000;} 
+nav input[id="menuicon"]+label span:nth-child(3){ bottom:0; background:#000;} 
+nav input[id="menuicon"]:checked+label span:nth-child(1){ top:50%; transform:translateY(-50%) rotate(45deg); background:white;} 
+nav input[id="menuicon"]:checked+label span:nth-child(2){ opacity:0; background:white;} 
+nav input[id="menuicon"]:checked+label span:nth-child(3){ bottom:50%; transform:translateY(50%) rotate(-45deg); background:white;}*/
+
+/*사이드바*/
+nav div[class="sidebar"]{
+    min-width: 250px;
+    max-width: 250px;
+    height: 100%;
+    background: #866ec7;
+    color: #fff;
+    position:relative;
+    top:0;
+    z-index:100;
+    transition:all .35s;
+    display: inline-block;
+    margin-right: -20px;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; 
+}
+
+nav h1 { margin-top:70px; margin-bottom: 20px; font-weight: 700;}
+nav h1 .logo { color: #fff; font-size: 35px; }
+nav ul.components { padding: 0; }
+nav ul li {font-size: 17px; }
+nav ul li > ul { margin-left: 10px; }
+nav ul li > ul li {font-size: 14px; }
+
+/* 호버애니메이션*/
+nav ul li a {
+    padding: 20px 0;
+    display: block;
+    color: rgba(255, 255, 255, 0.8);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
+}
+nav ul li a:hover {color: #fff;  border-bottom: 1.5px solid #b9a6eecc}
+nav ul li.active > a {
+    background: transparent;
+    color: #fff;
+} 
