--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -8,62 +8,101 @@
         <%- include("partials/sidebar"); -%>
           <!-- Page Content  -->
           <div id="content" class="p-4 p-md-5 pt-5">
-            <div class = "container-fluid">
+            <div class="container-fluid">
               <div class="row">
                 <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
                   <div class="card-body">
                     <h1 class="text-right text-bottom" style="color :white; font-weight: bold;">0</h1>
                     <h3 class="text-left" style="color :white; font-weight: lighter;">컨테이너</h3>
-                    <img src= "views/partials/image/logo.png"class="center_right" height="30" width="30">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                      class="bi bi-hdd-stack" viewBox="0 0 16 16">
+                      <path
+                        d="M14 10a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1v-1a1 1 0 0 1 1-1h12zM2 9a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-1a2 2 0 0 0-2-2H2z" />
+                      <path
+                        d="M5 11.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zM14 3a1 1 0 0 1 1 1v1a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V4a1 1 0 0 1 1-1h12zM2 2a2 2 0 0 0-2 2v1a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H2z" />
+                      <path d="M5 4.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0zm-2 0a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+                    </svg>
                   </div>
                 </div>
                 <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
                   <div class="card-body">
                     <h1 class="text-right text-bottom" style="color :white; font-weight: bold;">0</h1>
                     <h3 class="text-left" style="color :white; font-weight: lighter;">이미지</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                      class="bi bi-files" viewBox="0 0 16 16">
+                      <path
+                        d="M13 0H6a2 2 0 0 0-2 2 2 2 0 0 0-2 2v10a2 2 0 0 0 2 2h7a2 2 0 0 0 2-2 2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm0 13V4a2 2 0 0 0-2-2H5a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1zM3 4a1 1 0 0 1 1-1h7a1 1 0 0 1 1 1v10a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V4z" />
+                    </svg>
+
                   </div>
                 </div>
                 <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
                   <div class="card-body">
                     <h1 class="text-right text-bottom" style="color :white; font-weight: bold;">0</h1>
                     <h3 class="text-left" style="color :white; font-weight: lighter;">네트워크</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                      class="bi bi-hdd-network" viewBox="0 0 16 16">
+                      <path d="M4.5 5a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zM3 4.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+                      <path
+                        d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v1a2 2 0 0 1-2 2H8.5v3a1.5 1.5 0 0 1 1.5 1.5h5.5a.5.5 0 0 1 0 1H10A1.5 1.5 0 0 1 8.5 14h-1A1.5 1.5 0 0 1 6 12.5H.5a.5.5 0 0 1 0-1H6A1.5 1.5 0 0 1 7.5 10V7H2a2 2 0 0 1-2-2V4zm1 0v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V4a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1zm6 7.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5h-1a.5.5 0 0 0-.5.5z" />
+                    </svg>
                   </div>
                 </div>
                 <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
                   <div class="card-body">
-                    <h1 class="text-right text-bottom" style="color :white; font-weight: bold;">0</h1>
+                      <h1 class="text-right text-bottom" style="color :white; font-weight: bold;">0</h1>
                     <h3 class="text-left" style="color :white; font-weight: lighter;">볼륨</h3>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                        class="bi bi-hdd" viewBox="0 0 16 16">
+                        <path d="M4.5 11a.5.5 0 1 0 0-1 .5.5 0 0 0 0 1zM3 10.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z" />
+                        <path
+                          d="M16 11a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V9.51c0-.418.105-.83.305-1.197l2.472-4.531A1.5 1.5 0 0 1 4.094 3h7.812a1.5 1.5 0 0 1 1.317.782l2.472 4.53c.2.368.305.78.305 1.198V11zM3.655 4.26 1.592 8.043C1.724 8.014 1.86 8 2 8h12c.14 0 .276.014.408.042L12.345 4.26a.5.5 0 0 0-.439-.26H4.094a.5.5 0 0 0-.44.26zM1 10v1a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-1a1 1 0 0 0-1-1H2a1 1 0 0 0-1 1z" />
+                      </svg>
                   </div>
                 </div>
               </div>
-              <div class="pt-5 mx-3">
-                <span>노드 정보</span>
-                <div>
+              <div class="pt-5">
+                <a href="https://grafana.com" target="_blank"><img src="images/grafana.png"></a>
+                <a href="https://prometheus.io/" target="_blank"><img class="mx-3" src="images/prometheus.png"></a>
+              </div>
+              <div class="pt-5">
+                <a class="btn" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+                  aria-controls="collapseExample">노드 정보</a>
+                <div class="collapse" id="collapseExample">
                   <table class="table">
                     <tbody>
                       <tr>
                         <th scope="row" class="col-2 text-center">이름</th>
-                        <td><%= node[0].NAME %></td>
+                        <td>
+                          <%= node[0].NAME %>
+                        </td>
                       </tr>
                       <tr>
-                        <th scope="row" class="text-center">Docker 버전</th>
-                        <td class="col-8"><%= node[0].STATUS %></td>
+                        <th scope="row" class="text-center">Status</th>
+                        <td class="col-8">
+                          <%= node[0].STATUS %>
+                        </td>
                       </tr>
                       <tr>
-                        <th scope="row" class="text-center">Node CPU</th>
-                        <td><%= node[0].VERSION %></td>
+                        <th scope="row" class="text-center">Version</th>
+                        <td>
+                          <%= node[0].VERSION %>
+                        </td>
                       </tr>
                       <tr>
-                        <th scope="row" class="text-center">Node Memory</th>
-                        <td><%= node[0].OSImage %></td> <!-- 추후 바뀔 수 있음 -->
+                        <th scope="row" class="text-center">OS</th>
+                        <td>
+                          <%= node[0].OSImage %>
+                        </td> <!-- 추후 바뀔 수 있음 -->
                       </tr>
                     </tbody>
-                  </table>                  
+                  </table>
                 </div>
               </div>
-              <div class="pt-5 mx-3">
-                <span>Engine 정보</span>
-                <div>
+              <div class="pt-5">
+                <a class="btn" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false"
+                  aria-controls="collapseExample1">Engine 정보</a>
+                <div class="collapse" id="collapseExample1">
                   <table class="table">
                     <tbody>
                       <tr>
@@ -80,23 +119,29 @@
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">OS Type</th>
-                        <td><%= ostype%></td>
+                        <td>
+                          <%= ostype%>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">OS</th>
-                        <td><%= osplatform %></td>
+                        <td>
+                          <%= osplatform %>
+                        </td>
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">Architecture</th>
-                        <td><%= osarch %></td>
+                        <td>
+                          <%= osarch %>
+                        </td>
                       </tr>
                     </tbody>
-                  </table>                  
+                  </table>
                 </div>
-              </div>
               </div>
             </div>
           </div>
+      </div>
       </div>
     </main>
   </body>
