--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -19,6 +19,7 @@
           <li><a href="/namespace">네임스페이스 목록</a></li>
           <li><a href="/service">서비스 목록</a></li>
           <li><a href="/pod">Pod 목록</a></li>
+          <li><a href="/node">Node 목록</a></li>
         </ul>
       </div>
     </div>
