--- a/web/views/namespace.ejs
+++ b/web/views/namespace.ejs
@@ -8,7 +8,7 @@
                 <%- include("partials/sidebar"); -%>
                     <!-- Page Content  -->
                     <div id="content" class="p-4 p-md-5 pt-5">
-                        <div class="container">
+                        <div class="container-fluid">
                             <div class = "table-responsive">
                                 <table class="table">
                                     <thead>
@@ -21,27 +21,15 @@
                                       </tr>
                                     </thead>
                                     <tbody>
+                                      <% for (var i = 0; i < ns.length; i++) { %>
                                       <tr>
-                                        <th scope="row" class="col">1</th>
-                                        <td class="col-3">kind</td>
-                                        <td class="col-3">name</td>
-                                        <td class="col-3">status</td>
-                                        <td class="col-3">podnumber</td> <!--for문으로 namespace 갯수 만큼 나오게 하기-->
+                                        <th scope="row" class="col-1"><%= i + 1 %></th>
+                                        <td class="col-3"><%= ns[i].KIND %></td>
+                                        <td class="col-3"><%= ns[i].NAME %></td>
+                                        <td class="col-3"><%= ns[i].STATUS %></td>
+                                        <td class="col-3"><%= ns[i].POD_NUMBER %></td> 
                                       </tr>
-                                      <tr>
-                                        <th scope="row" class="col">1</th>
-                                        <td class="col-3">kind</td>
-                                        <td class="col-3">name</td>
-                                        <td class="col-3">status</td>
-                                        <td class="col-3">podnumber</td> <!--for문으로 namespace 갯수 만큼 나오게 하기-->
-                                      </tr>
-                                      <tr>
-                                        <th scope="row" class="col">1</th>
-                                        <td class="col-3">kind</td>
-                                        <td class="col-3">name</td>
-                                        <td class="col-3">status</td>
-                                        <td class="col-3">podnumber</td> <!--for문으로 namespace 갯수 만큼 나오게 하기-->
-                                      </tr>
+                                      <% } %>
                                     </tbody>
                                   </table>
                             </div>
