--- a/web/views/pod.ejs
+++ b/web/views/pod.ejs
@@ -9,8 +9,11 @@
                     <!-- Page Content  -->
                     <div id="content" class="p-4 p-md-5 pt-5">
                         <div class="container-fluid">
-                            <div class = "table-responsive">
-                                <table class="table w-auto center-block">
+                          <% var k = 0; for (var i = 0; i < listLength; i++) { %>
+                            <a class="btn" data-bs-toggle="collapse" href="#collapseExample<%= i %>" role="button" aria-expanded="false"
+                            aria-controls="collapseExample<%= i %>"><%= list[i] %> </a>
+                            <div class = "table-responsive collapse" id = "collapseExample<%= i %>">
+                                  <table class="table w-auto center-block">
                                     <thead>
                                       <tr>
                                         <th scope="col">#</th>
@@ -22,19 +25,22 @@
                                       </tr>
                                     </thead>
                                     <tbody>
-                                      <% for (var i = 0; i < pod.length; i++) { %>
+                                      <% for (var j = 0; j < pod.reduce((cnt, it) => cnt + (list[i].replace(/'/g, "") === it.NAMESPACE), 0); j++) { %>
+                                        <% if (pod[k].NAMESPACE == list[i]) { %>
                                       <tr>
-                                        <th scope="row" class="col-1"><%= i + 1 %></th>
-                                        <td class="col-1"><%= pod[i].NAMESPACE %></td>
-                                        <td class="col-3"><%= pod[i].POD_NAME %></td>
-                                        <td class="col-3"><%= pod[i].POD_IMAGE %></td>
-                                        <td class="col-1"><%= pod[i].POD_IP %></td> 
-                                        <td class="col-3"><%= pod[i].NODE_IP %></td>
+                                        <th scope="row" class="col-1"><%= j + 1 %></th>
+                                        <td class="col-1"><%= pod[k].NAMESPACE %></td>
+                                        <td class="col-3"><%= pod[k].POD_NAME %></td>
+                                        <td class="col-3"><%= pod[k].POD_IMAGE %></td>
+                                        <td class="col-1"><%= pod[k].POD_IP %></td> 
+                                        <td class="col-3"><%= pod[k].NODE_IP %></td>
                                       </tr>
-                                      <% } %>
+                                      <% k++; } } %>
                                     </tbody>
                                   </table>
                             </div>
+                            <br>
+                            <% } %>
                         </div>
                     </div>
             </div>
