--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -45,10 +45,10 @@
                 <a href="https://prometheus.io/" target="_blank"><img class="mx-3" src="images/prometheus.png"></a>
               </div>
               <div class="pt-5">
-                <a class="btn" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
+                <a class="btn fw-bolder" data-bs-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false"
                   aria-controls="collapseExample">현재 노드 정보</a>
                 <div class="collapse" id="collapseExample">
-                  <table class="table">
+                  <table class="table table-bordered">
                     <tbody>
                       <tr>
                         <th scope="row" class="col-2 text-center">이름</th>
@@ -79,10 +79,10 @@
                 </div>
               </div>
               <div class="pt-5">
-                <a class="btn" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false"
+                <a class="btn fw-bolder" data-bs-toggle="collapse" href="#collapseExample1" role="button" aria-expanded="false"
                   aria-controls="collapseExample1">Engine 정보</a>
                 <div class="collapse" id="collapseExample1">
-                  <table class="table">
+                  <table class="table table-bordered">
                     <tbody>
                       <tr>
                         <th scope="row" class="col-2 text-center">Version</th>
