--- a/web/views/service.ejs
+++ b/web/views/service.ejs
@@ -10,7 +10,7 @@
                     <div id="content" class="p-4 p-md-5 pt-5">
                         <div class="container-fluid">
                             <div class = row>
-                                <table class="table">
+                                <table class="table table-bordered">
                                     <thead>
                                       <tr>
                                         <th scope="col">#</th>
