--- a/web/views/logging.ejs
+++ b/web/views/logging.ejs
@@ -11,7 +11,34 @@
                         <div class="container-fluid">
                             <div class="col-3">
                                 <canvas id="myChart"></canvas>
-                                <%- html %>
+                                <script>ctx = document.getElementById('myChart');
+                                    var myChart = new Chart(ctx, {
+                                    type: 'doughnut',
+                                    data: {
+                                        labels: [...new Set(err.map(it => it.NAMESPACE))],
+                                        datasets: [{
+                                            label: '# of Votes',
+                                            data: [Object.keys(err).length],
+                                            backgroundColor: [
+                                                'rgba(255, 99, 132, 0.2)',
+                                                'rgba(54, 162, 235, 0.2)',
+                                                'rgba(255, 206, 86, 0.2)',
+                                                'rgba(75, 192, 192, 0.2)',
+                                                'rgba(153, 102, 255, 0.2)',
+                                                'rgba(255, 159, 64, 0.2)'
+                                            ],
+                                            borderColor: [
+                                                'rgba(255, 99, 132, 1)',
+                                                'rgba(54, 162, 235, 1)',
+                                                'rgba(255, 206, 86, 1)',
+                                                'rgba(75, 192, 192, 1)',
+                                                'rgba(153, 102, 255, 1)',
+                                                'rgba(255, 159, 64, 1)'
+                                            ],
+                                            borderWidth: 1
+                                        }],
+                                    },
+                                }); </script>
                             </div>
                         </div>
                     </div>
