github action test working dir add

--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -86,7 +86,7 @@
                     <tbody>
                       <tr>
                         <th scope="row" class="col-2 text-center">Version</th>
-                        <td>Github Action Test!!</td>
+                        <td>Github Action Test!!!!</td>
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">API Version</th>
