--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -90,7 +90,7 @@
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">API Version</th>
-                        <td class="col-8">API Version 들어갈 예정</td>
+                        <td class="col-8">API Version 예정</td>
                       </tr>
                       <tr>
                         <th scope="row" class="text-center">Python Version</th>
