--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -10,32 +10,31 @@
           <div id="content" class="p-4 p-md-5 pt-5">
             <div class="container-fluid">
               <div class="row">
-                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
+                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #FFD498;">
                   <div class="card-body">
-                    <h1 class="text-right text-bottom" style="color :white; font-weight: bold;"><%= node.length %></h1>
-                    <h3 class="text-left" style="color :white; font-weight: lighter;">노드</h3>
+                    <h1 class="text-right text-bottom" style="color :black; font-weight: bold;"><%= node.length %></h1>
+                    <h3 class="text-left" style="color :black; font-weight: lighter;">노드</h3>
                     <img src="images/node.png" width="32" height="32">
                   </div>
                 </div>
-                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
+                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #FFD498;">
                   <div class="card-body">
-                    <h1 class="text-right text-bottom" style="color :white; font-weight: bold;"><%= pod %></h1>
-                    <h3 class="text-left" style="color :white; font-weight: lighter;">파드</h3>
+                    <h1 class="text-right text-bottom" style="color :black; font-weight: bold;"><%= pod %></h1>
+                    <h3 class="text-left" style="color :black; font-weight: lighter;">파드</h3>
                     <img src="images/pod.png" width="32" height="32">
                   </div>
                 </div>
-                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
+                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #FFD498;">
                   <div class="card-body">
-                    <h1 class="text-right text-bottom" style="color :white; font-weight: bold;"><%= ns %></h1>
-                    <h3 class="text-left" style="color :white; font-weight: lighter;">네임스페이스</h3>
+                    <h1 class="text-right text-bottom" style="color :black; font-weight: bold;"><%= ns %></h1>
+                    <h3 class="text-left" style="color :black; font-weight: lighter;">네임스페이스</h3>
                     <img src="images/ns.png" width="32" height="32">
-
                   </div>
                 </div>
-                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #866ec7;">
+                <div class="card mx-2" style="width: 23rem; height : 10rem; background-color: #FFD498;">
                   <div class="card-body">
-                      <h1 class="text-right text-bottom" style="color :white; font-weight: bold;"><%= service %></h1>
-                    <h3 class="text-left" style="color :white; font-weight: lighter;">서비스</h3>
+                      <h1 class="text-right text-bottom" style="color :black; font-weight: bold;"><%= service %></h1>
+                    <h3 class="text-left" style="color :black; font-weight: lighter;">서비스</h3>
                     <img src="images/svc.png" width="32" height="32">
                   </div>
                 </div>
