--- a/web/public/css/sidebar.css
+++ b/web/public/css/sidebar.css
@@ -1,21 +1,23 @@
 html {
-    width: 100% !important; 
+  width: 100% !important;
 }
 
 /* font */
 
-
 #content {
-    width: 100% !important;
-    padding: 0;
-    min-height: 100vh;
-    -webkit-transition: all 0.3s;
-    -o-transition: all 0.3s;
-    transition: all 0.3s; }
+  width: 100% !important;
+  padding: 0;
+  min-height: 100vh;
+  -webkit-transition: all 0.3s;
+  -o-transition: all 0.3s;
+  transition: all 0.3s;
+}
 
 /*메뉴아이콘*/
 
-a { text-decoration:none }
+a {
+  text-decoration: none;
+}
 /*nav input[id="menuicon"]{display:none;}
 nav input[id="menuicon"]+label{
     display:block;
@@ -45,39 +47,57 @@ nav input[id="menuicon"]:checked+label span:nth-child(2){ opacity:0; background:
 nav input[id="menuicon"]:checked+label span:nth-child(3){ bottom:50%; transform:translateY(50%) rotate(-45deg); background:white;}*/
 
 /*사이드바*/
-nav div[class="sidebar"]{
-    min-width: 250px;
-    max-width: 250px;
-    height: 100%;
-    background: #866ec7;
-    color: #fff;
-    position:relative;
-    top:0;
-    z-index:100;
-    transition:all .35s;
-    display: inline-block;
-    margin-right: -20px;
-    -webkit-transition: 0.3s;
-    -o-transition: 0.3s;
-    transition: 0.3s; 
+nav div[class="sidebar"] {
+  min-width: 250px;
+  max-width: 250px;
+  height: 100%;
+  background: #ffd498;
+  color: #fff;
+  position: relative;
+  top: 0;
+  z-index: 100;
+  transition: all 0.35s;
+  display: inline-block;
+  margin-right: 0;
+  -webkit-transition: 0.3s;
+  -o-transition: 0.3s;
+  transition: 0.3s;
 }
 
-nav h1 { margin-top:70px; margin-bottom: 20px; font-weight: 700;}
-nav h1 .logo { color: #fff; font-size: 35px; }
-nav ul.components { padding: 0; }
-nav ul li {font-size: 17px; }
-nav ul li > ul { margin-left: 10px; }
-nav ul li > ul li {font-size: 14px; }
+nav h1 {
+  margin-top: 70px;
+  margin-bottom: 20px;
+  font-weight: 700;
+}
+nav h1 .logo {
+  color: #000;
+  font-size: 35px;
+}
+nav ul.components {
+  padding: 0;
+}
+nav ul li {
+  font-size: 17px;
+}
+nav ul li > ul {
+  margin-left: 10px;
+}
+nav ul li > ul li {
+  font-size: 14px;
+}
 
 /* 호버애니메이션*/
 nav ul li a {
-    padding: 20px 0;
-    display: block;
-    color: rgba(255, 255, 255, 0.8);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1); 
+  padding: 20px 0;
+  display: block;
+  color: rgba(0, 0, 0, 0.8);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
-nav ul li a:hover {color: #fff;  border-bottom: 1.5px solid #b9a6eecc}
+nav ul li a:hover {
+  color: #fff;
+  border-bottom: 1.5px solid #d8d993;
+}
 nav ul li.active > a {
-    background: transparent;
-    color: #fff;
-} 
+  background: transparent;
+  color: #fff;
+}
