--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -1,28 +1,23 @@
 <nav>
-  <!--
-<input type="checkbox" id="menuicon">
-  <label for="menuicon">
-      <span></span>
-      <span></span>
-      <span></span>
-  </label>
--->
-  <!--진짜 사이드바-->
   <div class="sidebar">
     <div class="custom-menu">
       <i class="fa fa-bars"></i>
       <div class="p-4 pt-5">
         <h1><a href="/home" class="logo">KUBEBOARD</a></h1>
-        <ul class="list-unstyled components mb-5">
-          <li class="active"><a href="/home">대쉬보드</a></li>
-          <li><a href="/logging">로깅</a></li>
-          <li><a href="/namespace">네임스페이스 목록</a></li>
-          <li><a href="/service">서비스 목록</a></li>
-          <li><a href="/pod">Pod 목록</a></li>
-          <li><a href="/node">Node 목록</a></li>
+        <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Resource</a>
+          <li class="text-end"><a href="/home">DASHBOARD</a></li>
+          <li class="text-end"><a href="/namespace">NAMESPACE</a></li>
+          <li class="text-end"><a href="/service">SERVICE</a></li>
+          <li class="text-end"><a href="/pod">POD</a></li>
+          <li class="text-end"><a href="/node">NODE</a></li>
+        </ul>
+        <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Log Report</a>
+          <li class="text-end"><a href="/logging">Log-Report</a></li>
+        </ul>
+        <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Vulnerability</a>
+          <li class="text-end"><a href="/logging">Image Vulnerability</a></li>
         </ul>
       </div>
     </div>
   </div>
-  <!--진짜 사이드바 여기까지-->
 </nav>
