add image and log report

--- a/web/views/home.ejs
+++ b/web/views/home.ejs
@@ -4,7 +4,7 @@
 
   <body id="bootstrap-overrides">
     <main role="main">
-      <div class="wrapper d-flex align-items-stretch">
+      <div class="wrapper d-flex">
         <%- include("partials/sidebar"); -%>
           <!-- Page Content  -->
           <div id="content" class="p-4 p-md-5 pt-5">
