--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -12,10 +12,10 @@
           <li class="text-end"><a href="/node">NODE</a></li>
         </ul>
         <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Log Report</a>
-          <li class="text-end"><a href="/logging">Log-Report</a></li>
+          <li class="text-end"><a href="/logging" target="_blank">Log-Report</a></li>
         </ul>
         <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Vulnerability</a>
-          <li class="text-end"><a href="/logging">Image Vulnerability</a></li>
+          <li class="text-end"><a href="/vulnerability" target="_blank">Image Vulnerability</a></li>
         </ul>
       </div>
     </div>
