--- a/web/views/log-report/logging.ejs
+++ b/web/views/log-report/logging.ejs
@@ -1,25 +1,47 @@
-<%- include("partials/header"); -%>
+<%- include("../partials/header"); -%>
     <link rel="stylesheet" href="css/sidebar.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.5.1/chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        #style-6::-webkit-scrollbar-track {
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+            background-color: #F5F5F5;
+            border-radius: 10px;
+        }
+    
+        #style-6::-webkit-scrollbar {
+            width: 12px;
+            background-color: #F5F5F5;
+        }
+    
+        #style-6::-webkit-scrollbar-thumb {
+            border-radius: 10px;
+            -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+            box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.1);
+            background-image: -webkit-linear-gradient(330deg, #f6d365 0%, #fda085 100%);
+            background-image: linear-gradient(120deg, #f6d365 0%, #fda085 100%);
+        }
+    </style>
     </head>
-
     <body id="bootstrap-overrides">
         <main role="main">
             <div class="wrapper d-flex h-auto">
-                <%- include("partials/sidebar"); -%>
+                <%- include("../partials/sidebar"); -%>
                     <div id="content" class="my-5 ms-3">
-                        <div class="container-fluid me-5 row">
-                            <div class="col-lg-6 overflow-auto card g-0 mb-5" style="height:30rem;">
-                                <% for (var i=0; i < data.length; i++) { %>
-                                    <div class="card-body">
-                                        <span class="card-title col-sm-3 float-start fw-bolder">
-                                            <%- JSON.stringify(data[i].TIME) %>
-                                        </span>
-                                        <span class="card-text col-sm-9 float-end align-items-stretch text-break">
-                                            <%- JSON.stringify(data[i]) %>
-                                        </span>
-                                    </div>
-                                    <% } %>
+                        <div class="container-fluid row">
+                            <div class="col-lg-6">
+                                <div class="card g-0 overflow-auto" style="height:28rem;" id="style-6">
+                                    <% for (var i=0; i < data.length; i++) { %>
+                                        <div class="card-body">
+                                            <span class="card-title col-sm-4 float-start fw-bolder">
+                                                <%- JSON.stringify(data[i].TIME) %>
+                                            </span>
+                                            <span class="card-text col-sm-8 float-end justify-content-around text-break">
+                                                <%- JSON.stringify(data[i]) %>
+                                            </span>
+                                        </div>
+                                        <% } %>
+                                </div>  
                             </div>
                             <div class="col-lg-6 lh-1" style="height:30rem;">
                                 <div class="card text-center mb-5">
@@ -33,11 +55,11 @@
                                         </span>
                                     </div>
                                 </div>
-                                <div class="card text-center d-flex justify-content-around">
+                                <div class="card text-center">
                                     <div class="card-header d-flex">
                                         <h5 class="fw-bolder my-auto">Error count by containers</h5>
                                     </div>
-                                    <div class="card-body d-flex text-break">
+                                    <div class="card-body d-flex justify-content-center">
                                         <% for (var i=0; i < data.length; i++) { %>
                                                 <span class="fw-bolder card-title" style="font-size: 80px;">
                                                     <%- JSON.stringify(Object.values(host)[i]) %>
@@ -54,7 +76,7 @@
                                     <div class="card-header d-flex">
                                         <h5 class="fw-bolder my-auto">NAMESPACE</h5>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body d-flex justify-content-center">
                                         <canvas id="myChart" style="height:20rem;"></canvas>
                                         <script>ctx = document.getElementById('myChart').getContext('2d');
                                             var myChart = new Chart(ctx, {
@@ -63,10 +85,10 @@
                                                     labels: <%- JSON.stringify(Object.getOwnPropertyNames(namespace)) %>,
                                                     datasets: [{
                                                         data: <%- JSON.stringify(Object.values(namespace)) %>,
-                                                        backgroundColor: 'peachpuff',
+                                                        backgroundColor: ["#f0a58f", "#ea7369", "#eb548c", "#db4cb2","#af4bce" , "#7d3ac1","#29066b" ],
                                                     }],
-                                                }, options : {
-                                                    responsive : false
+                                                }, options: {
+                                                    responsive: false,
                                                 }
                                             })
                                         </script>
@@ -78,7 +100,7 @@
                                     <div class="card-header d-flex align-items-center">
                                         <h5 class="fw-bolder my-auto">KIND</h5>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body d-flex justify-content-center">
                                         <canvas id="myChart2" style="height:20rem;"></canvas>
                                         <script>ctx = document.getElementById('myChart2').getContext('2d');
                                             var myChart = new Chart(ctx, {
@@ -87,7 +109,7 @@
                                                     labels: <%- JSON.stringify(Object.getOwnPropertyNames(kind)) %>,
                                                     datasets: [{
                                                         data: <%- JSON.stringify(Object.values(kind)) %>,
-                                                        backgroundColor: ["navajowhite"],
+                                                        backgroundColor: ["#f0a58f", "#ea7369", "#eb548c", "#db4cb2","#af4bce" , "#7d3ac1","#29066b" ],
                                                     }],
                                                 }, options: {
                                                     responsive: false,
@@ -101,7 +123,7 @@
                                     <div class="card-header d-flex align-items-center">
                                         <h5 class="fw-bolder my-auto">NAME</h5>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body d-flex justify-content-center">
                                         <canvas id="myChart3" style="height:20rem;"></canvas>
                                         <script>ctx = document.getElementById('myChart3').getContext('2d');
                                             var myChart = new Chart(ctx, {
@@ -110,7 +132,7 @@
                                                     labels: <%- JSON.stringify(Object.getOwnPropertyNames(name)) %>,
                                                     datasets: [{
                                                         data: <%- JSON.stringify(Object.values(name)) %>,
-                                                        backgroundColor: 'navajowhite',
+                                                        backgroundColor: ["#f0a58f", "#ea7369", "#eb548c", "#db4cb2","#af4bce" , "#7d3ac1","#29066b" ],
                                                     }],
                                                 }, options : {
                                                     responsive : false
@@ -121,10 +143,10 @@
                             </div>
                             <div class="col-lg-6">
                                 <div class="card">
-                                    <div class="card-header d-flex align-items-center">
-                                        <h5 class="fw-bolder my-auto">Date</h5>
+                                    <div class="card-header d-flex">
+                                        <h5 class="fw-bolder my-auto">TIME</h5>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body d-flex justify-content-center">
                                         <canvas id="myChart4" class="align-middle"
                                             style="height:20rem"></canvas>
                                         <script>ctx = document.getElementById('myChart4').getContext('2d');
@@ -136,7 +158,7 @@
                                                         label: 'Count',
                                                         data: <%- JSON.stringify(Object.values(time)) %>,
                                                         fill: true,
-                                                        backgroundColor: 'navajowhite',
+                                                        backgroundColor:"#f0a58f",
                                                         tension: 0.1
                                                     }],
                                                 },options: {
