--- a/web/views/log-report/logging.ejs
+++ b/web/views/log-report/logging.ejs
@@ -167,6 +167,7 @@
                                                     scales: {
                                                         y: {
                                                             beginAtZero: true,
+                                                            max: 10
                                                         }
                                                     }
                                                 },
