--- a/web-log-error/views/logging.ejs
+++ b/web-log-error/views/logging.ejs
@@ -1,5 +1,5 @@
 <%- include("partials/header"); -%>
-    <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="/css/sidebar.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         #style-6::-webkit-scrollbar-track {
