--- a/web-log-image/views/partials/header.ejs
+++ b/web-log-image/views/partials/header.ejs
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <html lang="en">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Kubernetes-Enterprise-Log-Analysis-System</title>
+    <title>Kubeboard</title>
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
