--- a/web-log-image/views/partials/sidebar.ejs
+++ b/web-log-image/views/partials/sidebar.ejs
@@ -15,7 +15,7 @@
           <li class="text-end"><a href="/logging/" target="_blank">Log-Report</a></li>
         </ul>
         <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Vulnerability</a>
-          <li class="text-end"><a href="/vulnerability/" target="_blank">Image Vulnerability</a></li>
+          <li class="text-end"><a href="/vulnerability/" target="_blank">Image Vulnerability8</a></li>
         </ul>
       </div>
     </div>
