github action test for demo image scanning

--- a/web/views/partials/sidebar.ejs
+++ b/web/views/partials/sidebar.ejs
@@ -11,7 +11,7 @@
           <li class="text-end"><a href="/pod">POD</a></li>
           <li class="text-end"><a href="/node">NODE</a></li>
         </ul>
-        <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Log Report</a>
+        <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Log Report Test</a>
           <li class="text-end"><a href="/logging/" target="_blank">Log-Report</a></li>
         </ul>
         <ul class="list-unstyled components mb-5" style="font-size: 30px; text-align: center; color: red;"> <a>Vulnerability</a>
